--- a/task-b/style.css
+++ b/task-b/style.css
@@ -7,7 +7,7 @@ WORK IN PROGRESS
 
 
 html, body { height: 100%; font-family: system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial; color: #222; }
-body { display: flex; flex-direction: column; min-height: 100vh; line-height: 1.5; padding: 1rem; background: #ccdddd; }
+body { display: flex; flex-direction: column; min-height: 100vh; line-height: 1.5; padding: 1rem; background-color: #ccdddd; }
 
 
 .site-header { text-align: center; padding: 2rem 1rem; background: rgb(230, 230, 230); border-radius: 12px; box-shadow: 0 2px 8px rgba(20,20,40,0.05); }
