--- a/task-b/style.css
+++ b/task-b/style.css
@@ -43,9 +43,10 @@ main { display: grid; grid-template-columns: 1fr 320px; gap: 1rem; align-items: 
 #mainbox { grid-column: 1 / 3; text-align: justify; }
 #about, #features { grid-column: 1 / 2; text-align: justify; }
 #contact { grid-column: 2 / 3; }
+#exobloc { grid-column: 1 / 3; text-align: justify; color:#222}
 }
 
 /* Spacing wasn't very good without this */
 ul, ol {
-  padding-left: 1rem; /* ou 1.5rem selon le degré de décalage souhaité */
+  padding-left: 1rem;
 }
