--- a/task-d/style.css
+++ b/task-d/style.css
@@ -5,15 +5,13 @@ WORK IN PROGRESS
 
 /* Main page effects */
 
-/* Reset minimal */
-* {
+* {   /* Reset minimal */
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-html,
-body {
+html, body {
   height: 100%;
   font-family: system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
   color: #222;
@@ -28,13 +26,16 @@ body {
   background-color: #ccdddd;
 }
 
-
-a:not([attr*="custom-color"]) {
-  font-weight: bold;
+a[target] {
+  font-weight: 700;
 }
 
 ul, ol {
   padding-left: 1rem;
+}
+
+h1, h2, h3 {
+  font-family: 'Bahnschrift', sans-serif;
 }
 
 /* site-header : first box only */
@@ -48,7 +49,6 @@ ul, ol {
 }
 
 .header h1 {
-  font-family: 'Bahnschrift', sans-serif;
   font-size: 1.8rem;
   margin-bottom: 0.25rem;
   color: #000066
@@ -123,6 +123,10 @@ section h3 {
   margin-top: 0.6rem;
 }
 
+section ul li {
+  font-weight: 500;
+}
+
 .site-footer {
   text-align: center;
   padding: 0.75rem 0;
@@ -142,22 +146,21 @@ section h3 {
     align-items: start;
   }
 
-  #mainbox {
+  .box {
     grid-column: 1 / 3;
     text-align: justify;
   }
 
-  #about,
-  #features {
+  #about, #features {
     grid-column: 1 / 2;
     text-align: justify;
   }
 
-  #contact {
+  #highlight {
     grid-column: 2 / 3;
   }
 
-  #multimedia {
+  #special-message {
     grid-column: 1 / 3;
     text-align: justify;
     color: #000000;
