--- a/task-d/style.css
+++ b/task-d/style.css
@@ -15,6 +15,7 @@ html, body {
   height: 100%;
   font-family: system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
   color: #222;
+  text-align: justify;
 }
 
 body {
@@ -134,6 +135,10 @@ section ul li {
   font-size: 0.9rem;
 }
 
+.contact {
+  text-align: left;
+}
+
 @media (min-width: 420px) {
   body {
     padding: 2rem;
@@ -148,12 +153,10 @@ section ul li {
 
   .box {
     grid-column: 1 / 3;
-    text-align: justify;
   }
 
   #about, #features {
     grid-column: 1 / 2;
-    text-align: justify;
   }
 
   .highlight {
@@ -162,7 +165,6 @@ section ul li {
 
   #special-message {
     grid-column: 1 / 3;
-    text-align: justify;
     color: #000000;
   }
 
