--- a/task-f/style.css
+++ b/task-f/style.css
@@ -1,6 +1,6 @@
 /*
-Author: Ville Heikkiniemi
-Date: 2025-10-06
+Author: Marius Pozo (after Ville Heikkiniemi)
+Date: 2025-10-09
 */
 
 /* COLOR GUIDELINES
